= filerenamer Changelog

<!-- Master -->


依存性ちぇっく
* Add RenameOrderer, a smart dependency resolver of rename processes.

== Version 0.0.9 [2016-07-12] released

* Add --git option

== Version 0.0.8 [2015-07-23] released
* Add --preserve option to bin/rentime.
* Small change of --help of bin/classify.
* renreg: '/' to '／' is ignored.
* Add automatic detection zero-padding width to bin/rennum.
* Add --random option to bin/rennum.

== Version 0.0.7 [2013-12-20] released
* classify -u to lowercase.
* classify -4 to 2chars and 2layer-directoriess.
* renhash -C to use various hash commmands not sha256sum.
* Add bin/classify_greed.

== Version 0.0.6 [2013-04-18] released
* Add --unite option to bin/classify, which unite t and T into T.
* Adjust to builtinextension-0.1.0.

== Version 0.0.5
* Bugfix bin/classify
* Add bin/rentime

== Version 0.0.4
* Add renhash
* Rename bin/classify1stchar to bin/classify
* Add function to bin/classify
  * Japanese-yomi is indicated to be option.
  * Shorten filename; e.g., abc -> a/bc.
  * Indicating directory name length; e.g., abc -> ab/abc.

== Version 0.0.3
* Restruct class and module name
* Add bin/renpad

== Version 0.0.2
* Command name changes; rensub, rennum, etc
* Add bin/renpar

== Version 0.0.1
* bin/classifyWith1stChar to classify1stchar and add function of kanji kana inversion using kakasi

== Version 0.0.0

* Initial release
