@@ -5,6 +5,7 @@
 
 依存性ちぇっく
 * Add RenameOrderer, a smart dependency resolver of rename processes.
+* bin/rennum; --random option was renamed to --shuffle
 
 == Version 0.0.9 [2016-07-12] released
 
